--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h1>Find a place to stay.</h1>
-        <p>Rent from people in over 34,000 cities and 192 countries.</p>
-        <a href="#">Learn More</a>
+        <h1>Home Page of Daniel Jiang</h1>
+        <p>Computer Science student at <a href="http://osu.edu" target="_blank">The Ohio State University</a></p>
+        <a href="about.html">Learn More</a>
       </div>
     </div> 
     <div class="neighborhood-guides">
