--- a/index.html
+++ b/index.html
@@ -1,81 +1,80 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="Content-type" content="text/html; charset-utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <head>
-    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="main.css">
-  </head>
+  <!-- CSS-->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles.css">
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <!-- jQuery UI -->
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
+</head>
 
-  <body>
-    <div class="nav">
-      <div class="container">
-        <ul class="pull-left">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
-        <ul class="pull-right">
-          <li><a href="contact.html">Contact me</a></li>
-          <li><a href="admin.html">Log In</a></li>
+
+<body>
+  <nav>
+    <div id="header">
+      <div id="navbar">
+        <p id="name"><a href="#">Daniel Jiang</a></p>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
+  </nav>
 
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Home Page of Daniel Jiang</h1>
-        <p>Computer Science student at <a href="http://osu.edu" target="_blank">The Ohio State University</a></p>
-        <a href="about.html">Learn More</a>
-      </div>
-    </div> 
-    <div class="neighborhood-guides">
-        <div class="container">
-            <h2>Neighborhood Guides</h2>
-            <p>Not sure where to stay? We've created neighborhood guides for cities all around the world</p>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/0sX3jq">
-                    </div>
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/an2HXY">
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/Av1pac" >
-                    </div>
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/vw43v1">
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="thumbnail">
-                        <img src="http://goo.gl/0Kd7UO"/>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Home Page of Daniel Jiang</h1>
     </div>
-    <div class="learn-more">
-	  <div class="container">
-		<div class="row">
-	      <div class="col-md-4">
-			<h3>Travel</h3>
-			<p>From apartments and rooms to treehouses and boats: stay in unique spaces in 192 countries.</p>
-			<p><a href="#">See how to travel on Airbnb</a></p>
-	      </div>
-		  <div class="col-md-4">
-			<h3>Host</h3>
-			<p>Renting out your unused space could pay your bills or fund your next vacation.</p>
-			<p><a href="#">Learn more about hosting</a></p>
-		  </div>
-		  <div class="col-md-4">
-			<h3>Trust and Safety</h3>
-			<p>From Verified ID to our worldwide customer support team, we've got your back.</p>
-			<p><a href="#">Learn about trust at Airbnb</a></p>
-		  </div>
-	    </div>
-	  </div>
-	</div>
-  </body>
+  </div> 
+
+  <!-- About -->
+  <section>
+  <h1 id="about">About Me</h1>
+  </section>
+
+
+
+  <!-- Education -->
+  <section>
+    <h1>Education</h1>
+  </section>
+
+
+
+  <!-- Experience -->
+  <section>
+    <h1>Experience</h1>
+  </section>
+
+
+
+  <!-- Contact -->
+  <section>
+    <h1>Contact Me</h1>
+  </section>
+
+
+
+  <!-- footers -->
+  <footer class="container" id="info">
+    
+  </footer>
+
+  <footer id="copyright">
+    <p>Copyright &copy Daniel Jiang 2015</p>
+  </footer>
+  <!-- footers -->
+</body>
 </html>
