Skills section updated
added familiarity level for each skill and tool

--- a/index.html
+++ b/index.html
@@ -148,20 +148,62 @@
         <div class="col-md-3"></div>
         <div class="col-md-4">
           <ul>
-            <li>HTML<span class="glyphicon glyphicon-star" aria-hidden="true" style="padding-left:80px"></span></li>
-            <li>CSS</li>
-            <li>Bootstrap</li>
-            <li>JavaScript</li>
-            <li>JQuery</li>
+            <li>HTML
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
+            <li>CSS
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
+            <li>Bootstrap
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
+            <li>JavaScript
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
+            <li>JQuery
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
           </ul>
         </div>
         <div class="col-md-4">
           <ul>
-            <li>Java</li>
-            <li>SQL</li>
-            <li>Ruby</li>
-            <li>Rails</li>
-            <li>PHP</li>
+            <li>Java
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
+            <li>SQL
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
+            <li>Ruby
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
+            <li>Rails
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
+            <li>C#
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
           </ul>
         </div>
         <div class="col-md-1"></div>
@@ -173,9 +215,18 @@
         <div class="col-md-3"></div>
         <div class="col-md-4">
           <ul>
-            <li>MS Office</li>
-            <li>Sublime Text</li>
-            <li>Git</li>
+            <li>MS Office
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>              
+            </li>
+            <li>Git
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+              <span class="glyphicon glyphicon-star" aria-hidden="true" style=""></span>
+            </li>
           </ul>
         </div>
 
